# Mizu-Engine

./: .gitignore  CMakeLists.txt  Mizu Engine.sln  README.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml  task.yml
Mizu Engine/: CMakeLists.txt  Config.h  Mizu Engine.vcxproj  main.cpp
Mizu Engine/Renderer/: Colours.h  Renderer.cpp  Renderer.h  Shader.h
Mizu Engine/Renderer/Camera/: Camera.cpp  Camera.h
Mizu Engine/Renderer/EBO/: EBO.cpp  EBO.h
Mizu Engine/Renderer/ShaderClass/: ShaderClass.cpp  ShaderClass.h
Mizu Engine/Renderer/Shaders/: defaultShader.frag  defaultShader.vert
Mizu Engine/Renderer/Texture/: Texture.cpp  Texture.h
Mizu Engine/Renderer/VAO/: VAO.cpp  VAO.h
Mizu Engine/Renderer/VBO/: VBO.cpp  VBO.h
Mizu Engine/Window/: MizuEngineWindow.cpp  MizuEngineWindow.h
Resources/Shaders/: default2DTextureShader.vert  default3DShader.frag  default3DShader.vert  defaultShader.frag  defaultShader.vert  diffuse3DShader.vert  lit3DShader.frag  lit3DShader.vert
dependencies/glad/src/: glad.c
glad/include/glad/: glad.h
